src/main/webapp/styles.css
*
{
    font-family : 'Readex Pro', sans-serif;
}

.dataTables_filter
{
    margin-bottom : 6px;
}

.title
{
    font-size   : 3em;
    font-weight : bold;
    text-align  : center !important;
}

.header
{
    font-size  : 1.5em;
    text-align : center !important;
}

td
{
    border-left  : 1px solid #000000;
    border-right : 1px solid #000000;
}

th
{
    border-left  : 1px solid #000000;
    border-right : 1px solid #000000;
}

